log
Sat, Mar 29, 2025 10:53:16 AM: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
25021aa
Sat, Mar 29, 2025 11:12:12 AM: 
 list.c | 18 +++++++++++-------
 1 file changed, 11 insertions(+), 7 deletions(-)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:44:5: error: expected ';' before '}' token
     }
     ^
Compilation failed
ba1165b
Sat, Mar 29, 2025 11:12:45 AM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ec86fd7
Sat, Mar 29, 2025 11:15:35 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 25/70
0699afd
Sat, Mar 29, 2025 11:21:44 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
f850d16
Sat, Mar 29, 2025 11:24:48 AM: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
e301084
